[package]
name = "content-management-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

env_logger = "0.9"
log = "0.4"

dotenv = "0.15.0"

diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
