[package]
name = "content-management-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }

log = "0.4"
env_logger = "0.9.0"

dotenv = "0.15.0"

diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
r2d2_redis = "0.14.0"

derive_more = "0.99.17"

jsonwebtoken = "8.1.0"

argon2 = "0.4.0"

actix-web-httpauth = "0.6.0"
